#2040: replace immutable HashSet by Set.of() to reduce code * set locale in NumUtilTest to US * adjusted imports * closes #2040